# manim_physics

./: README.md  requirements.txt  requirements_dev.txt  setup.cfg
src/manim_physica.egg-info/: PKG-INFO  top_level.txt
src/manim_physics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/manim_physics/objects/: mass.py  spring2D.py  wall.py
src/manim_physics/utils/: id_generator.py
tests/: conftest.py  test_id_generator.py  test_mass.py  visual_test.py
