[metadata]
name = manim_physics
description = Package providing physics objects to the manim package
long_description = file: README.md
long_description_content_type= text/markdown
author = Laurenz Ruzicka
url = LINK_TO_GITHUB_URL
license = MIT
licence_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
version = 0.1.0
[options]
packages =
    manim_physics
install_requires =
    manim>=0.14
    numpy>=1.21
python_requires = >=3.7
package_dir =
    =src
zib_safe = no